src/runtime/iris_runtime.h

typedef void* pthread_t;
static inline int pthread_create(pthread_t* t, const void* attr, void* (*fn)(void*), void* arg) {
    (void)attr; if (t) *t = NULL; if (fn) fn(arg); return 0;
}
// ---------------------------------------------------------------------------
// Tagged value type — used for boxed heap values (lists, maps, closures, etc.)
// ---------------------------------------------------------------------------
typedef enum {
    IRIS_TAG_I64     = 0,
    IRIS_TAG_I32     = 1,
    IRIS_TAG_F64     = 2,
    IRIS_TAG_F32     = 3,
    IRIS_TAG_BOOL    = 4,
    IRIS_TAG_STR     = 5,
    IRIS_TAG_LIST    = 6,
    IRIS_TAG_MAP     = 7,
    IRIS_TAG_OPTION  = 8,
    IRIS_TAG_RESULT  = 9,
    IRIS_TAG_CLOSURE = 10,
    IRIS_TAG_TUPLE   = 11,
    IRIS_TAG_STRUCT  = 12,
    IRIS_TAG_CHAN    = 13,
    IRIS_TAG_ATOMIC  = 14,
    IRIS_TAG_GRAD    = 15,
    IRIS_TAG_SPARSE  = 16,
    IRIS_TAG_UNIT    = 17,
    IRIS_TAG_ENUM    = 18,
    IRIS_TAG_MUTEX   = 19,
} IrisTag;
typedef struct IrisVal {
    IrisTag tag;
    union {
        int64_t  i64;
        int32_t  i32;
        double   f64;
        float    f32;
        uint8_t  boolean;
        char*    str;   /* null-terminated, heap-allocated */
        void*    ptr;   /* typed pointer for complex types */
    };
} IrisVal;
// ---------------------------------------------------------------------------
// Complex heap types
// ---------------------------------------------------------------------------

typedef struct {
    IrisVal** data;
    size_t    len;
    size_t    cap;
} IrisList;
// ---------------------------------------------------------------------------
// Boxing / unboxing
// ---------------------------------------------------------------------------
IrisVal* iris_box_i64(int64_t v);
IrisVal* iris_box_f64(double v);
// ---------------------------------------------------------------------------
// List
// ---------------------------------------------------------------------------
IrisList* iris_list_new(void);
void      iris_list_push(IrisList* list, IrisVal* val);
void         iris_par_for(void (*fn)(int64_t), int64_t start, int64_t end);
// Forward declaration so sparse-tensor prototypes can reference it.
typedef struct IrisTensor IrisTensor;
// Tensor ops — real compute
// IrisTensor holds a contiguous f32 buffer with shape metadata.
struct IrisTensor {
    float*  data;     // row-major contiguous data
    int64_t* shape;   // shape array (heap-allocated)
    int32_t  ndim;    // number of dimensions
    int64_t  numel;   // total number of elements (product of shape)
};
IrisTensor* iris_tensor_alloc(int32_t ndim, const int64_t* shape);
void        iris_tensor_free(IrisTensor* t);
// ---------------------------------------------------------------------------
// Backend integration (ONNX / LibTorch / TensorFlow)
// ---------------------------------------------------------------------------

// ONNX Runtime shim: load/run/free
void* iris_onnx_session_create(const char* model_path);
int   iris_onnx_session_run(void* session, IrisTensor** inputs, size_t n_inputs, IrisTensor*** outputs, size_t* n_outputs);
void  iris_onnx_session_free(void* session);
// LibTorch (PyTorch) shim: load/run/free (C++ shim exposes C ABI)
void* iris_pytorch_load(const char* model_path);
int   iris_pytorch_run(void* model, IrisTensor** inputs, size_t n_inputs, IrisTensor*** outputs, size_t* n_outputs);
void  iris_pytorch_free(void* model);
// TensorFlow saved model shim (C API based)
void* iris_tf_load_saved_model(const char* path);
int   iris_tf_run(void* model, IrisTensor** inputs, size_t n_inputs, IrisTensor*** outputs, size_t* n_outputs);
void  iris_tf_free(void* model);